# kicad-spaghetti

./: .gitignore  Cargo.toml  README.md  build.py  build.rs  out.txt
shaders/: circle_shader.wgsl  debug_shader.wgsl  edge_shader.wgsl  line_shader.wgsl  triangle_shader.wgsl
src/: app.rs  colors.rs  draw.rs  gui.rs  main.rs  physics.rs  sim.rs  tree.rs  typed_idx.rs  utils.rs
