[package]
name = "spaghetti-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

# kicad
kicad-ipc-rs = { version = "0.5", features = ["blocking"] }

# graphics
wgpu = "29.0.3"
winit = { version = "0.30", features = ["android-native-activity"] }

# gui
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
pollster = "0.4.0"
env_logger = "0.11.10"
glam = "0.32.1"
smallvec = "1.15.1"
lyon = "1.0.19"
bytemuck = "1.25.0"
crossbeam-channel = "0.5.15"
thread-priority = "3.0.0"
itertools = "0.14.0"
profiling = "1.0.18"
tracy-client = "0.18.4"

[features]
# Keep profiling opt-in so it doesn't affect release builds by default
profile = [
    "profiling/profile-with-tracy",
    "tracy-client/enable",
]

[profile.release]
debug = true  # Tracy needs symbols to show useful names
