[package]
name = "kicad-spaghetti"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

# kicad
# kicad-ipc-rs = { version = "0.5", features = ["blocking"] }
kicad-ipc-rs = {
	git = "https://github.com/uanpis/kicad-ipc-rs.git", 
	branch = "no-submodules",
	features = ["blocking"],
}

# graphics
wgpu = "29.0.3"
winit = { version = "0.30", features = ["android-native-activity"] }
bytemuck = "1.25.0"

# gui
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
pollster = "0.4.0"
env_logger = "0.11.10"

# data
glam = "0.32.1"
num = "0.4.3"
strum = "0.28.0"
strum_macros = "0.28.0"

# threading
rayon = "1.12.0"
crossbeam-channel = "0.5.15"

[features]
mark = []

[profile.release]
debug = true  # Tracy needs symbols to show useful names
